--- a/src/index.html
+++ b/src/index.html
@@ -3,12 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <title>FrontBrbch</title>
-    <link href="/src/assets/css/styles.css" rel="stylesheet" />
     <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Core theme CSS (includes Bootstrap)-->
-    
   </head>
   <body>
     <app-root></app-root>
@@ -16,5 +14,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- Core theme JS-->
     <!-- <script src="src/assets/js/scripts.js"></script> -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css"
+      rel="stylesheet"
+    />
+    <link href="css/styles.css" rel="stylesheet" />
+    <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">   
+    <script
+      src="https://use.fontawesome.com/releases/v6.3.0/js/all.js"
+      crossorigin="anonymous"
+    ></script>
+    <script></script>
   </body>
 </html>
